# AlphaScholar

./: README.md  cli.bat  main.bat  pyproject.toml  reguirements.txt  result.md  retriever.json
AlphaScholar/alphascholar/: __init__.py  prompts.py  states.py  templates.py
AlphaScholar/alphascholar/components/: footbar.py  navbar.py
AlphaScholar/alphascholar/pages/: about.py  index.py  login.py  reader.py  reader1.py  signup.py  tracker.py  tracker1.py
AlphaScholar/reflex.lock/: package.json
logs/: training_data.json
reports/: 001_vae_on_microbiome_final_report.md  002_vae_on_microbiome_final_report.md  vae_with_microbiome_multi_agents_deepseek.md  vae_with_microbiome_two_agents_deepseek.md  vae_with_microbiome_twoagent_local_log.md  vae_with_microbiome_twoagent_local_log1.md
skills/pubmed-database-skill/: SKILL.md
skills/pubmed-database-skill/mcp/: server.py
skills/pubmed-database-skill/references/: pubmed_guide.md
src/AlphaScholar/: agent.py  alpha_scholar.py  config.py  llms.py  main.py  memory.py  prompts.py  skill_manager.py  tools.py  utils.py
web/: .gitignore  requirements.txt  rxconfig.py
web/alphascholar/: alphascholar.py
web/alphascholar/components/: navbar.py
web/alphascholar/pages/: assistant.py  index.py  reader1.py  signup.py
